# mb-cli

./: Cargo.toml  README.md  install.ps1  install.sh  justfile
.github/workflows/: release.yml
skills/mb/: SKILL.md
skills/mb/references/: flags.md
src/: cli.rs  client.rs  config.rs  llm_help.rs  main.rs  output.rs
src/commands/: collections.rs  config_cmd.rs  databases.rs  fields.rs  mod.rs  query.rs  question.rs  questions.rs  skill.rs  tables.rs
