[package]
name = "mb-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mb"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tabled = "0.17"
anyhow = "1"
dirs = "6"
rpassword = "7"
